--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Day 1 HW</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Day 1 HW</title>
 </head>
-<body>
-<!------ content ------>
-
-
-<!------ comment ------>
-
-<!------ comment ------>
-
-
+<body
+    <div class="magic">
+      <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12">
+              <h1>Day 1 Homework  </h1>
+              <h3>Why I am taking this class  </h3>
+                <ul>
+                    <li>I am taking this class because I will need these skills to develop mobile-first sites and apps.</li>
+                    <li>I like taking Ryeker's class</li>
+                    <li>I want to feel more confident about this</li>
+                    <li>I feel better, but I know that the foundation is really, really important</li>
+                    <li>I have more time this time around</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-3">
+          <h1>Ryeker's Class</h1>
+            <div class="col-md-9">
+              <h3>Rock on </h3>
+              <p>randomness  </p>
+            </div>
+        </div>
+      </div>
+    </div>
 
 
 <!------ javascript ------>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
